[project]
name = "did-py"
version = "0.0.11"
description = "what did i do?"
authors = [{name="Casey Williams", email="caseyjw@mail.com"}]
urls = {github="https://github.com/shnupta/did"}
license = {text="MIT"}
keywords = [ "time-management", "tasks", "productivity" ]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"

[project.scripts]
did="did.main:main"

[build-system]
requires = ['vulcan-py']
build-backend = "vulcan.build_backend"

[[tool.vulcan.shiv]]
bin_name = "did"
entry_point = "did.main:main"
interpreter="/usr/bin/env python3"
extra_args="--compile-pyc"
